# xcstrings_mcp

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: DEVICE_VARIATIONS.md  FILE_ORGANIZATION.md
examples/: Extractor.xcstrings  InfoPlist.xcstrings  LivePhotos.xcstrings
src/: apple_json_formatter.rs  lib.rs  main.rs  mcp_server.rs  store.rs  web.rs
src/web/: index.html  mod.rs
tests/: format_preservation.rs
