[package]
name = "xcstrings_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.5", features = ["server", "transport-async-rw"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
thiserror = "1"
parking_lot = "0.12"
axum = { version = "0.7", features = ["macros", "json", "tokio", "http1"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
async-trait = "0.1"
serde_with = "3"
